--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "test": "./node_modules/mocha/bin/mocha"
   },
   "dependencies": {
+    "bluebird": "^3.1.1",
+    "sprintf-js": "^1.0.3",
     "winston": "^2.1.1"
   }
 }
