--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "bluebird": "^3.1.1",
     "sprintf-js": "^1.0.3",
-    "winston": "^2.1.1"
+    "winston": "^2.1.1",
+    "chroot": "~1.0.9"
   }
 }
