--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bluebird": "^3.1.1",
     "sprintf-js": "^1.0.3",
     "winston": "^2.1.1",
-    "chroot": "~1.0.9"
+    "chroot": "~1.0.9",
+    "netmask": "~1.0.5"
   }
 }
