--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
   },
   "dependencies": {
     "bluebird": "^3.1.1",
-    "sprintf-js": "^1.0.3",
-    "winston": "^2.1.1",
     "chroot": "~1.0.9",
-    "netmask": "~1.0.5"
+    "netmask": "~1.0.5",
+    "request": "^2.81.0",
+    "sprintf-js": "^1.0.3",
+    "winston": "^2.1.1"
   }
 }
